# vulkan-renderer-rust

./: .gitignore  Cargo.toml  README.md
assets/shaders/: compile.bat  triangle.frag  triangle.vert
assets/viking_room/: viking_room.gltf
src/: app.rs  main.rs  utils.rs
