[package]
name = "vulkan-renderer-rust"
version = "0.1.0"
edition = "2021"

[features]
# Log frame time in ms, activate using `cargo run --features verbose-frame-time`
verbose-frame-time = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.0", default-features = false, features = ["linked", "debug"]}
ash-window = "0.11.0"
winit ="0.27.2"
glam = "0.21.3"
memoffset = "0.9.0"
image = "0.24.8"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
